--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "type": "module",
   "dependencies": {
-    "@floating-ui/dom": "1.5.3"
+    "@floating-ui/dom": "1.5.3",
+    "@passwordless-id/webauthn": "^1.3.0"
   }
 }
